--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,4 +1,13 @@
-@import url(https://fonts.googleapis.com/css?family=Share+Tech+Mono);
+@font-face {
+  font-family: "Share Tech Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url(/fonts/share-tech-mono.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
 .image-replacement {
   text-indent: 100%;
   white-space: nowrap;
@@ -27,18 +36,19 @@ body {
   font-size: 26px;
   font-weight: 300;
   text-shadow: 0 0 5px rgba(3, 200, 21, 0.8);
-  background: url(https://image.ibb.co/h2hLAJ/bg.png) #000;
+  background: url(/images/bg.png) #000;
   position: relative;
   height: 100vh;
 }
 
 .container {
   left: 0;
-  right: 0;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
 }
 
 .container.is-success {
@@ -46,10 +56,10 @@ body {
   filter: hue-rotate(180deg) brightness(2.7);
 }
 
-.screen::after {
+.screen-after {
   content: "";
   display: block;
-  background: url(https://image.ibb.co/dbSZLJ/bottom.png) no-repeat center;
+  background: url(/images/bottom.png) no-repeat center;
   margin: 0 auto;
   width: 100%;
   max-width: 500px;
@@ -67,7 +77,7 @@ body {
 .title::before {
   content: "";
   display: inline-block;
-  background: url(https://image.ibb.co/gpxZLJ/top_outer.png);
+  background: url(/images/top_outer.png);
   width: 144px;
   height: 20px;
   margin: 0 20px;
@@ -77,56 +87,31 @@ body {
   color: #22edfc;
 }
 
-.box--outer {
-  position: relative;
+.sep-outer,
+.sep-inner {
   margin: 0 auto;
+}
+
+.sep-outer {
   width: 90%;
-  max-width: 1080px;
+  position: relative;
   border-top: #000 18px solid;
   border-bottom: #000 18px solid;
-  -o-border-image: url(https://image.ibb.co/kHHeny/hor_line.png) 17 11 17 round;
-  border-image: url(https://image.ibb.co/kHHeny/hor_line.png) 17 11 17 round;
+  -o-border-image: url(/images/hor_line.png) 17 11 17 round;
+  border-image: url(/images/hor_line.png) 17 11 17 round;
 }
 
-.box {
-  display: inline-block;
-  text-transform: uppercase;
-  text-align: center;
+.sep-inner {
   width: 100%;
-  max-width: 1080px;
-}
-
-.box--inner {
-  display: inline-block;
-  width: calc(100% - 105px);
-  max-width: 1010px;
-}
-
-.box--inner::after,
-.box--inner::before {
   content: "";
   display: inline-block;
-  background: url(https://image.ibb.co/kvJfud/box_inner.png) no-repeat center;
-  max-width: 642px;
-  width: 100%;
+  background: url(/images/box_inner.png) no-repeat center;
   height: 27px;
 }
 
 .content {
-  position: relative;
-  display: block;
-  max-height: 600px;
-  min-height: 400px;
-  height: 100%;
-}
-
-.content .holder {
-  left: 0;
-  right: 0;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
+  text-align: center;
+  margin: auto;
 }
 
 .col.col__center,
@@ -196,68 +181,16 @@ body {
   text-transform: uppercase;
 }
 
-@media only screen and (max-width: 1260px) {
-  .title::after,
-  .title::before {
-    width: 42px;
-    height: 18px;
-  }
-  .col.col__center,
+@media only screen and (max-width: 710px) {
   .col.col__left {
-    display: block;
-    width: auto;
-    margin: 0;
-  }
-  .box--outer::after,
-  .box--outer::before {
     display: none;
   }
-  .title::after,
-  .title::before {
-    margin: 0 5px;
-  }
-  .content {
-    height: 440px;
-  }
-  .box::after,
-  .box::before {
-    height: 500px;
-  }
-  #submit {
-    margin-bottom: 0;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .container {
-    font-size: 0.8em;
+  .col.col__center {
+    margin: 0;
   }
   .title::after,
   .title::before {
-    width: 4%;
-    height: 18px;
-  }
-  .box--outer {
-    -o-border-image: url(https://image.ibb.co/kHHeny/hor_line.png) 17 330 17
-      round;
-    border-image: url(https://image.ibb.co/kHHeny/hor_line.png) 17 330 17 round;
-  }
-  .box::after,
-  .box::before {
-    width: 22px;
-    background: url(ver-line-mobile.png) no-repeat center;
-    background-size: contain;
-  }
-  .box--inner {
-    width: calc(100% - 44px);
-  }
-  #email,
-  #login,
-  #password {
-    max-width: 70%;
-  }
-  .screen::after {
-    max-width: 180px;
+    display: none;
   }
 }
 
@@ -641,20 +574,14 @@ body.off::after {
   }
 }
 
-.screen {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-.container.off > .screen {
+.container.off {
   -webkit-animation: turn-off 0.55s cubic-bezier(0.23, 1, 0.32, 1);
   animation: turn-off 0.55s cubic-bezier(0.23, 1, 0.32, 1);
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 }
 
-.container.on > .screen {
+.container.on {
   -webkit-animation: turn-on 2s linear;
   animation: turn-on 2s linear;
   -webkit-animation-fill-mode: forwards;
