home page login as default instead of enlist menu item names now defined in html enstead of js

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,6 +32,10 @@ body {
   height: -webkit-fill-available;
 }
 
+.hidden {
+  display: none;
+}
+
 .disabled {
   opacity: 0.25;
   cursor: not-allowed !important;
